[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/tutorial.gd" type="Script" id=1]
[ext_resource path="res://scripts/graph.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/tap_off.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/pause_light.png" type="Texture" id=4]
[ext_resource path="res://assets/pixelation_shader_material.tres" type="Material" id=5]
[ext_resource path="res://assets/icons/mouse.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/mouse_leftclick.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/tap_on.png" type="Texture" id=8]
[ext_resource path="res://assets/audio/victory_trumpets_big.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "fadein"
length = 0.75
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("node_ui_container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeout"
length = 0.75
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("node_ui_container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "leftclick"
length = 1.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("node_ui_container/click_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "long_tap"
length = 1.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("node_ui_container/click_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("node_ui_container/click_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 8 ) ]
}

[node name="base" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 300 )
script = ExtResource( 1 )

[node name="background_layer" type="CanvasLayer" parent="."]
layer = -1

[node name="background" type="ColorRect" parent="background_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.859375, 0.859375, 0.859375, 1 )

[node name="node_ui_container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="lines_layer" type="CanvasLayer" parent="node_ui_container"]
layer = 0

[node name="points_layer" type="CanvasLayer" parent="node_ui_container"]

[node name="nodes_layer" type="CanvasLayer" parent="node_ui_container"]
layer = 2

[node name="click_img" type="Sprite" parent="node_ui_container"]
position = Vector2( 395, 710 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="ui_layer" type="CanvasLayer" parent="."]
layer = 3

[node name="pause_btn" type="TextureButton" parent="ui_layer"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_top = 36.0
margin_right = 320.0
margin_bottom = 562.0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )

[node name="pause_background" type="ColorRect" parent="ui_layer"]
visible = false
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="fade_anim" type="AnimationPlayer" parent="."]
anims/fadein = SubResource( 1 )
anims/fadeout = SubResource( 2 )

[node name="click_anim" type="AnimationPlayer" parent="."]
anims/leftclick = SubResource( 3 )
anims/long_tap = SubResource( 4 )
anims/short_tap = SubResource( 5 )

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -16.0
[connection signal="pressed" from="ui_layer/pause_btn" to="." method="toggle_pause"]
